Fix JavaModules to automatically pick up add-exports from the command line